--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -7,6 +7,7 @@
   height: 100vh;
   width: 300px;
 }
+
 .side_top {
   height: 100px;
   background-color: #253141;
@@ -27,7 +28,6 @@
   color: deepskyblue;
   font-size: 10px;
 }
-
 
 .side_main {
   height: calc(100% - 100px);
@@ -50,18 +50,91 @@
   height: 100vh;
   width: calc(100vw - 300px);
 }
+
 .main_top {
   height: 100px;
   background-color: #ffffff;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+.chat_name {
+  font-size: 24px;
+  color: #333;
+}
+.delete_button {
+  padding: 20px;
+  border: 1px solid darkred;
+}
+.delete_button a {
+  text-decoration: none;
+  color: darkred;
+}
+
 .main_middle {
   height: calc(100% - 190px);
   background-color: #fafafa;
   padding: 46px 40px 0 40px;
+  overflow: scroll;
 }
+.message_top {
+  display: flex;
+  padding: 10px 0;
+  align-items: center;
+}
+.name {
+  font-size: 16px;
+  color: #434a54;
+  padding-right: 10px;
+}
+.date {
+  font-size: 12px;
+  color: #999;
+}
+.message {
+  font-size: 14px;
+  color: #434a54;
+  padding-bottom: 40px;
+}
+
 .main_bottom {
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+  display: flex;
+}
+.form {
+  height: 50px;
+  width: calc(100% - 94px);
+  background-color: white;
+  display: flex;
+  margin-right: 15px;
+  position: relative;
+}
+.form_message {
+  padding-left: 10px;
+  width: calc(100% - 80px);
+  height: 100%;
+  border: none;
+}
+.form_image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  text-align: center;
+  position: absolute;
+  right: 10px;
+  top: 5px;
+}
+.file {
+  display: none;
+}
+.form_send {
+  height: 50px;
+  width: 80px;
+  background-color: #38aef0;
+  color: white;
 }
