--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,30 @@
 <div class="main_top">
+  <div class="chat_name">
+    ChatRoom1
+  </div>
+  <div class="delete_button">
+    <a href="#">チャットを終了する</a>
+  </div>
 </div>
 <div class="main_middle">
+  <div class="message_top">
+    <div class="name">Ryuto</div>
+    <div class="date">2022/9/27(Tue) 6:00:12</div>
+  </div>
+  <div class="message">Good morning!</div>
+  <div class="message_top">
+    <div class="name">Karoline</div>
+    <div class="date">2022/9/27(Tue) 6:00:13</div>
+  </div>
+  <div class="message">Good morning!!</div>
 </div>
 <div class="main_bottom">
+  <div class="form">
+    <input class="form_message" placeholder="type a message">
+    <label>
+      <span class="form_image">画像</span>
+      <input type="file" class="file">
+    </label>  
+  </div>
+  <input class="form_send" type="submit" value="送信">
 </div>
