ユーザー情報表示の実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="side_top">
   <div class="user_name">
-    <a href="#">Ryuto</a>
+    <%= link_to current_user.name, edit_user_path(current_user)%>
   </div>
   <div class="side_button">
     <a href="#">チャットを作成する</a>
