--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,38 +3,13 @@
     <%= link_to current_user.name, edit_user_path(current_user)%>
   </div>
   <div class="side_button">
-    <a href="#">チャットを作成する</a>
+    <%= link_to "チャットを作成する", new_room_path%>
   </div>
 </div>
 <div class="side_main">
-  <div class="chat_button">
-    <a href="#">ChatRoom1</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom2</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom3</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom4</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom5</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom6</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom7</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom8</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom9</a>
-  </div>
-  <div class="chat_button">
-    <a href="#">ChatRoom10</a>
-  </div>
+  <% current_user.rooms.each do |room| %>
+    <div class="chat_button">
+      <a href="#"><%= room.name %></a>
+    </div>
+  <% end %>
 </div>
