--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,24 +1,12 @@
 <div class="main_top">
-  <div class="chat_name">
-    ChatRoom1
-  </div>
+  <div class="chat_name"><%= @room.name%></div>
   <div class="delete_button">
     <a href="#">チャットを終了する</a>
   </div>
 </div>
 <div class="main_middle">
-  <div class="message_top">
-    <div class="name">Ryuto</div>
-    <div class="date">2022/9/27(Tue) 6:00:12</div>
-  </div>
-  <div class="message">Good morning!</div>
-  <div class="message_top">
-    <div class="name">Karoline</div>
-    <div class="date">2022/9/27(Tue) 6:00:13</div>
-  </div>
-  <div class="message">Good morning!!</div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
-
 <%= form_with model: [@room, @message], class: 'main_bottom', local: true do |f|%>
   <div class="form">
     <%=f.text_field :content, class: "form_message", placeholder: "type a message"%>
