--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,5 +1,5 @@
 <div class="message_top">
   <div class="name"><%= message.user.name%></div>
-  <div class="date"><%= message.created_at%></div>
+  <div class="date"><%= l message.created_at%></div>
 </div>
 <div class="message"><%= message.content%></div>
