--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -9,11 +9,11 @@
 </div>
 <%= form_with model: [@room, @message], class: 'main_bottom', local: true do |f|%>
   <div class="form">
-    <%=f.text_field :content, class: "form_message", placeholder: "type a message"%>
+    <%=f.text_field :content, class: 'form_message', placeholder: "type a message"%>
     <label>
       <span class="form_image">画像</span>
-      <%= f.file_field :image, class: "file"%>
+      <%= f.file_field :image, class: 'file'%>
     </label>  
   </div>
-  <%= f.submit '送信', class: "form_send" %>
+  <%= f.submit '送信', class: 'form_send' %>
 <% end %>
