--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,3 +3,4 @@
   <div class="date"><%= l message.created_at%></div>
 </div>
 <div class="message"><%= message.content%></div>
+<%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
